# sql-sushi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  requirements-dev.txt
.github/ISSUE_TEMPLATE/: code_question.md  erratum.md
.github/workflows/: ci.yml
chapter_12_scheduling_sql_pipelines_python/: README.md  expected_counts.json  requirements.txt
chapter_12_scheduling_sql_pipelines_python/scripts/: build_seed_data.py  db.py  generate_data.py  load_raw.py  runner.py  steps.py  verify_counts.py
chapter_12_scheduling_sql_pipelines_python/sql/: 00_create_schemas.sql  10_raw_ddl.sql  30_pipeline_metadata.sql
chapter_12_scheduling_sql_pipelines_python/sqlsushi-pipeline-v1/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
chapter_13_workflow_orchestration/: README.md  requirements.txt
chapter_13_workflow_orchestration/schedules/: register_sql_sushi_task.ps1  sql_sushi_pipeline.cron.example
chapter_13_workflow_orchestration/scripts/: run_scheduled_pipeline.py
chapter_14_sql_transformation_frameworks/: README.md  requirements.txt
chapter_14_sql_transformation_frameworks/dbt/: dbt_project.yml  profiles.yml
chapter_14_sql_transformation_frameworks/orchestration/dagster_sqlmesh/: README.md  pyproject.toml
chapter_14_sql_transformation_frameworks/orchestration/dagster_sqlmesh/src/sql_sushi_sqlmesh_dagster/: __init__.py  definitions.py
chapter_15_beyond_sql_spark/: README.md
chapter_16_real_time_data_transformation/: README.md  requirements.txt
chapter_17_end_to_end_sqlmesh_github_actions/: README.md  requirements.txt
(+54 files in other folders)
